<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cliente.N_F_cliente.FragmentMiPerfilc">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarl"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:text="@string/txtMiPerfil"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#ccc"/>

        </RelativeLayout>

      <!--Info Cli-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPerfilc"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ico_fotoperfil"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Nombres-->
                <EditText
                    android:id="@+id/txtNombrePerfilc"
                    android:hint="@string/txtNombrePerfilc"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Email-->
                <EditText
                    android:id="@+id/txtEmailPerfilc"
                    android:hint="@string/txtEmailPerfilc"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--DNI-->
                <EditText
                    android:id="@+id/txtDniPc"
                    android:hint="@string/txtDniPc"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Telf-->
                <EditText
                    android:id="@+id/txtTelfPc"
                    android:hint="@string/txtTelfPc"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Ubicacion gps-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <AutoCompleteTextView
                    android:id="@+id/txtUbicacionc"
                    android:hint="@string/txtUbicacionc"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Fecha-->
            <TextView
                android:id="@+id/fechaPerfilPc"
                android:hint="@string/fechaPerfilPc"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!--Provee-->
            <TextView
                android:id="@+id/proveerdoPc"
                android:hint="@string/proveerdoPc"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <!--btnG-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardarPc"
                android:text="@string/btnGuardarPc"
                android:layout_gravity="center"
                app:cornerRadius="8dp"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </LinearLayout>


</ScrollView>