<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/iniciasesionvaca"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedor.LoginVendedorActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:padding="15dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

    <!--email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEmail"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ico_email"
            android:drawablePadding="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/txtPassword"
            android:drawableStart="@drawable/ico_password"
            android:drawablePadding="9dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>
        <!--Boton-->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLoginV"
         android:text="@string/btnLoginV"
         android:textAllCaps="true"
         app:cornerRadius="8dp"
         android:layout_marginTop="15dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>

        <!--Pregunta-->
    <TextView
        android:text="@string/txtNocuentaV"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <!--registrar vendedor-->
        <TextView
            android:id="@+id/tuRegistrameV"
            android:text="@string/tuRegistrameV"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:textColor="@color/verde_claro"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>