<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/ico_regcliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.RegistroClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:padding="15dp">


        <!--Nombres -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombresc"
                android:hint="@string/txtNombresc"
                android:drawableStart="@drawable/ico_nombres"
                android:drawablePadding="9dp"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtEmail"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ico_email"
                android:drawablePadding="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--pass -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtPass"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--confirmarpass -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/verde_claro"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edtConfirm"
                android:hint="@string/etcPassword"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarc"
            android:text="@string/btnRegistrarc"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:padding="14dp"
            app:cornerRadius="12dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>